frappe/public/scss/desk/dark.scss
[data-theme="dark"] {
	--gray-50: #{$gray-50};
	--gray-100: #F7FAFC;
	--gray-200: #EDF2F7;
	--gray-300: #E2E8F0;
	--gray-400: #CBD5E0;
	--gray-500: #A0AEC0;
	--gray-600: #718096;
	--gray-700: #4A5568;
	--gray-800: #2D3748;
	--gray-900: #1A202C;

	// Type Colors
	--text-muted: var(--gray-400);
	--text-light: var(--gray-300);
	--text-color: var(--gray-50);
	--heading-color: var(--gray-50);
	--text-secondary-color: var(--blue-50);

	// SVG Colors
	--icon-fill: transparent;
	--icon-stroke: var(--gray-300);

	// Error colors
	--error-bg: var(--orange-100);
	--error-border: var(--orange-400);

	// Layout Colors
	--bg-color: var(--gray-900);
	--fg-color: var(--gray-800);
	--navbar-bg: var(--gray-800);
	--fg-hover-color: var(--gray-700);
	--card-bg: var(--gray-800);
	--disabled-text-color: var(--gray-400);
	--disabled-control-bg: var(--gray-700);
	--control-bg: var(--gray-700);
	--control-bg-on-gray: var(--gray-800);
	--awesomebar-focus-bg: var(--control-bg);
	--awesomplete-hover-bg: var(--gray-700);
	--modal-bg: var(--gray-700);
	--toast-bg: var(--modal-bg);
	--popover-bg: var(--bg-color);

	// Background Text Color Pairs
	--bg-blue: var(--blue-600);
	--bg-light-blue: var(--blue-400);
	--bg-dark-blue: var(--blue-900);
	--bg-green: var(--dark-green-500);
	--bg-yellow: var(--yellow-500);
	--bg-orange: var(--orange-500);
	--bg-red: var(--red-500);
	--bg-gray: var(--gray-600);
	--bg-darkgray: var(--dark-gray-600);
	--bg-purple: var(--purple-600);
	--bg-lightblue: var(--pacific-blue-600);
	--bg-light-gray: var(--gray-700);

	--text-on-blue: var(--blue-50);
	--text-on-light-blue: var(--blue-100);
	--text-on-dark-blue: var(--blue-300);
	--text-on-green: var(--dark-green-50);
	--text-on-yellow: var(--yellow-50);
	--text-on-orange: var(--orange-100);
	--text-on-red: var(--red-50);
	--text-on-gray: var(--gray-300);
	--text-on-darkgray: var(--dark-gray-100);
	--text-on-purple: var(--purple-100);
	--text-on-lightblue: var(--pacific-blue-50);
	--text-on-light-gray: var(--gray-100);

	--sidebar-select-color: var(--gray-800);

	--shadow-inset: var(--fg-color);
	--border-color: var(--gray-700);
	--dark-border-color: var(--gray-600);
	--table-border-color: var(--gray-600);
	--highlight-color: var(--gray-700);
	--yellow-highlight-color: var(--yellow-700);

	// input
	--input-disabled-bg: none;

	.frappe-card {
		.btn-default {
			background-color: var(--bg-color);
			&:hover {
				background-color: var(--fg-hover-color);
			}
		}
	}

	.modal,
	.form-in-grid {
		--control-bg: var(--gray-800);
		--border-color: var(--gray-600);
	}

	.print-format {
		--text-color: var(--gray-900);
		--border-color: var(--gray-100);
	}

	.ql-editor {
		color: var(--text-on-gray);
		&.read-mode {
			span,
			p,
			u,
			strong {
				background-color: inherit !important;
				color: inherit !important;
			}
		}
	}
/* 	--appreciation-color: var(--dark-green-100);
	--appreciation-bg: var(--dark-green-600);
	--criticism-color: var(--red-100);
	--criticism-bg: var(--red-600); */

	// Frappe Charts Colors
	.chart-container {
		--charts-label-color: var(--gray-300);
		--charts-axis-line-color: var(--gray-500);

		--charts-stroke-width: 5px;
		--charts-dataset-circle-stroke: #ffffff;
		--charts-dataset-circle-stroke-width: var(--charts-stroke-width);

		--charts-tooltip-title: var(--charts-label-color);
		--charts-tooltip-label: var(--charts-label-color);
		--charts-tooltip-value: white;
		--charts-tooltip-bg: var(--gray-900);

		--charts-legend-label: var(--charts-label-color);
	}

	.form-control:focus {
		color: white;
	}

	// find better fix
	.heatmap-chart {
		g > rect[fill="#ebedf0"] {
			fill: var(--gray-700);
		}
	}

	.rating {
		// rating
		--star-fill: var(--gray-500);
		.star-hover {
			--star-fill: var(--gray-400);
		}
	}

	// skeleton
	--skeleton-bg: var(--gray-800);
	--right-arrow-svg: url("data: image/svg+xml;utf8, <svg width='6' height='8' viewBox='0 0 6 8' fill='none' xmlns='http://www.w3.org/2000/svg'><path d='M1.25 7.5L4.75 4L1.25 0.5' stroke='white' stroke-linecap='round' stroke-linejoin='round'/></svg>");
}

